--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="#section-2">Portfolio</a>
+
                 </li>
                 <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,8 +39,8 @@
                  </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Career history</a>
-                    <a class="dropdown-item" href="#">Awards</a>
-                    <a class="dropdown-item" href="#">Skills</a>
+                    <a class="dropdown-item" href="#section-3">Skills</a>
+                    <a class="dropdown-item" href="#section-4">Awards</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="https://drive.google.com/file/d/1WeBrjryCiWluO7Em-zWkj0d5F4FQI0IW/view">Resume</a>
                 </div>
@@ -61,7 +62,7 @@
    .hero-image {
      background-image: url("IMAGES/PROFILEBACK.jpg");
      background-color:#423D3C;
-     height: 90vh;
+     height: 98vh;
      width: 100vw;
      background-position: center;
      background-repeat: no-repeat;
@@ -79,16 +80,19 @@
        But that's not my story.  <br> 
          My passion is driving the next iterations of great design and communication. I love the act of finding new solutions and innovative ways of engaging with readers and users, exciting them and leaving them hungry for knowledge and experiences they've yet to imagine.</p>
          <button onclick="window.location.href='https://drive.google.com/file/d/1WeBrjryCiWluO7Em-zWkj0d5F4FQI0IW/view?usp=share_link';" type="button">download resume</button></div>
-     </div>
+
+        </div>
      </div>
    </div>
+
    <body>
 </section>
 <!-- Hero end -->   
 
 <!-- Portfolio start --> 
+
 <div class="container-fluid">
-    <h1 class="mt-5 portfolio">portfolio</h1>
+    <h1 class="mt-5 portfolio"id="section-2">portfolio</h1>
     <div class="scrolling-wrapper row flex-row flex-nowrap mt-3 pb-4 pt-2">
 		<!-- Portfolio Item 01 23 Trav Guide -->   
         <div class="col-auto">
@@ -237,9 +241,10 @@
 <!-- Portfolio end --> 
 
 <!-- Skills start -->
-<h1 class="mt-5 portfolio">skills</h1>
 
-<div class="row">
+<h1 class="mt-5 portfolio"id="section-3">skills</h1>
+
+<div class="row row3">
     <div class="col-12 col-md-12 col-lg-3">
 
             <div class="heading"><img src="images/technical skill.png" alt="Technical skills icon" width=30; height=30;>
@@ -343,9 +348,81 @@
   </div>
 <!-- Skills end -->
 
+<!-- Awards start -->
+
+<h1 class="mt-5 portfolio"id="section-4">awards</h1>
+
+<div class="row row3">
+    <div class="col-12 col-md-12 col-lg-3">
+        <div class="row3">
+            <ul>
+                <li>2022 Online Journalism Awards. <i><br>1st place.</i></li>
+                <li>2021 SND Best of Digital News Design  <i><br>2 awards. Award of Excellence.</i></li>
+                <li>2021 New Jersey Press Association. <i><br>1st Place, Design Portfolio</i></li>
+                <li>2022 - Excellence in Journalism. <i><br>1st place, Illustration Portfolio.</i></li>
+                <li>2021 Excellence in Features Awards. <i><br>1st place. illustrations and animations.</i></li>
+                <li>2020 Keystone Press Awards. <i><br>1st place, Front page design.</i></li>
+
+            </ul>
+        </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-3">
+            <ul>
+                <li>2019 Keystone Press Awards.<i><br>2nd place, Front page design.</i></li>
+                <li>2018 New York Associated Press.<i><br>1st place, Illustration or Graphic.
+                </i></li>
+                <li>2018 Keystone Press Awards. <i><br>1st Place, Front page design.
+                </i></li>
+                <li>2018 Michigan Press Association. <i><br>Daily A. 1st place.
+                </i></li>
+                <li>2017 Pennsylvania AP Awards. <i><br>2nd place.
+                </i></li>
+                <li>2014 Wisconsin Newspaper Association Awards. <i><br>1st place (Group A) Overall Page Design.
+                </i></li>
+            </ul>
+        </div>
+        <div class="col-12 col-md-12 col-lg-3">
+            <ul>
+                <li>2014 WNA Awards. <i><br>1st place (Group B) Overall Page Design. 
+                </i></li>
+                <li>2014 WNA Awards. <i><br>1st Place (Group C) Overall Page Design. 
+                </i></li>
+                <li>2014 WNA Awards. <i><br>1st Place (Group B) Features Page Design. 
+                </i></li>
+                <li>2014 WNA Awards. <i><br>1st Place, Graphics.
+                </i></li>
+                <li>2014, 1st Quarter Gannett Award of Excellence. <i><br>1st place, Design.</i></li>
+                <li>2013, 2nd Quarter Gannett Award of Excellence. <i><br>1st place, Design. 
+                </i></li>            </ul>
+        </div>
+        <div class="col-12 col-md-12 col-lg-3">
+            <ul>
+                <li>2013, 1st Quarter Gannett Award of Excellence. <i><br>1st place, Design. 
+                </i></li>
+                <li>2012 WNA Awards. <i><br>Best Designer.</i></li>
+                <li>2012, 4th Quarter Gannett Award of Excellence. <i><br>1st place, Design. </i></li>
+                <li>2011, Ohio Excellence in Journalism. <i><br>Best Page Design</i></li>
+                <li>2009, Ohio Society of Professional Journalists. <i><br>Best Graphic Designer
+                </i></li>
+                <li>2009, Ohio Excellence in Journalism. <i><br>Best Page Design.
+                2008, Ohio SPJ. Best Graphic Designer</i></li>
+            </ul>
+        </div>
+
+
+            </div>
+
+ 
+  </div>
+</div>
+
+
+  </div>
+<!-- Awards end -->
+
 <!-- Footer start -->
 <footer>
-    <div class="footer justify-content-end">
+    <div class="footer sticky-top justify-content-end">
         <a class="name">Sean McKeown-Young</a>
         <a class="gold"></a><img src="images/ICON_EMAIL.png"alt="seanmckeownyoung@gmail.com" width="30" height="30" href="mailto:seanmckeownyoung@gmail.com"></a>
         <a class="gold">&nbsp;seanmckeownyoung@gmail.com &nbsp;</a> 
