--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 </head>
 
 <body>
+    
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
  
     <!-- Navigation start -->
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">Sean McKeown-Young</a>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" href="#section-1">Sean McKeown-Young</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,6 +60,7 @@
     <style>
    body {
    }
+   
    .hero-image {
      background-image: url("IMAGES/PROFILEBACK.jpg");
      background-color:#423D3C;
@@ -73,8 +75,9 @@
    </head>
    
    <div class="hero-image">
+    <class="portfolio"id="section-1">
      <div class="hero-text">
-       <div><h1>about.</h1></div>
+       <div><h1>About me.</h1></div>
        <div><h2>Great design drives me.</h2></div>
          <p>I've created design, illustration and interactive digital experiences that are seen nationally and internationally. I've redesigned multiple US newspapers. I've spoken at SND (the Society of New Design) and won multiple awards from a bunch of AP's to a few SND's. 
        But that's not my story.  <br> 
